@@ -5,6 +5,7 @@
 - P4A_Dir_Source::setPageLimit() calling was disabled
 - P4A_Dir_Source's page limit is now set to 0 (disabled)
 - autocomplete values are now sorted and unique
+- P4A_Field::getSource() method was added
 
 3.8.1
 - jQuery was updated to 1.4.4
